<resources>
    <string name="app_name">Calculadora</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="string_Calcular">Calcular</string>
    <string name="string_Limpiar">Limpiar</string>
    <string name="string_Primera">Ingresa la primera nota</string>
    <string name="string_Segunda">Ingresa la segunda nota</string>
    <string name="string_Tercera">Ingresa la tercera nota</string>

    <string name="string_Texto" formatted="false">Esta aplicación te ayudara a calcular las notas de tus materias,
    Para utilizar esta app debes ingresar los porcentajes equivalentes al 35%, 35%, 30% de tu asignatura.
    \nNota: si no ingresas el ultimo campo la calculadora te dira que porcentaje debes aplicar en el ultimo
        corte para aprobar la asignatura en 3.0</string>

    <string name="string_porcentaje35">35%</string>
    <string name="string_porcentaje30">30%</string>
    <string name="string_wellcome">Bienvenid@</string>
    <string name="string_calcula">Calcula tus notas:</string>

    <string name="string_alert">OK</string>
    <string name="string_btncallGenesis">Ir a Genesis</string>
    <string name="string_btncallAulas">Ir a Aulas Virtuales</string>
    <string name="string_btncallPortal">Ir a Portal Principal</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
