<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_color_backgrount"
    tools:context="com.uniminuto.calculadora.calculadora.fragment.fragmentOther">

       <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
           android:layout_gravity="center_horizontal">


            <include layout="@layout/simple_button"></include>
            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btncallGenesis"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/string_btncallGenesis"
                bootstrap:bb_roundedCorners="true"
                bootstrap:bb_type="primary" />



            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btncallAulas"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/string_btncallAulas"
                bootstrap:bb_roundedCorners="true"
                bootstrap:bb_type="primary" />


           <com.beardedhen.androidbootstrap.BootstrapButton
               android:id="@+id/btncallPortal"
               android:layout_width="200dp"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
               android:text="@string/string_btncallPortal"
               bootstrap:bb_roundedCorners="true"
               bootstrap:bb_type="primary" />

        </LinearLayout>


</FrameLayout>
